--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "files.associations": {
+        "ostream": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp"
+    }
 }
