--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,5 +3,5 @@
     "command": "g++",
     "isShellCommand": true,
     "showOutput": "always",
-    "args": ["-g","-std=c++14", "CompileMe.cpp" , "VectorPractise.cpp"]
+    "args": ["-g","-std=c++14", "CompileMe.cpp" ]
 }
